<resources>
    <string name="app_name" translatable="false">Happy Grocery</string>
    <string name="take_barcode_picture">Take Barcode Picture</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="product_prompt">Adding to the basket..</string>
    <string name="title_activity_main">Happy Grocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jack Sparrow</string>
    <string name="nav_header_subtitle">jack_pirate@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">Frame your barcode!</string>
    <string name="qr_prompt">Frame the store QR!</string>
    <string name="long_search">Try a shorter search!</string>

    <!-- RELATIVE TO DASHBOARD ACTIVITY -->
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="dashboard_default_prod_name">Product name</string>
    <string name="dashboard_default_prod_details">30$</string>
    <string name="last_product_image">Last product image</string>
    <string name="currency">$</string>
    <string name="marker_text">products in category</string>
    <string name="dashboard_empty_card_text1">No products to show</string>
    <string name="dashboard_empty_card_text2">Tap to add a new product -></string>

    <!-- NAMES OF THE CATEGORIES -->
    <string name="category1">Food</string>
    <string name="category2">Beverage</string>
    <string name="category3">Kids</string>
    <string name="category4">Home</string>
    <string name="category5">Clothing</string>

    <!-- NAMES OF MENU ITEMS -->
    <string name="shopping_cart">Cart</string>

    <!--SERVER URL -->
    <string name="server_url">"https://my-json-server.typicode.com/AlessandroCaste/HappyGroceryDB/products?barcode="</string>
    <!-- <string name="default_web_client_id">636017224538-hdchojmaea1l7tr0d90qocv6ttovl6hf.apps.googleusercontent.com</string> -->

    <!-- SERVICE STRINGS -->
    <string name="loading">Load in progress</string>
    <string name="signed_in">Welcome back!</string>
    <string name="signed_out">Signed Out</string>
    <string name="facebook_app_id">738193019859979</string>
    <string name="fb_login_protocol_scheme">fb738193019859979</string>

    <!-- DRAWER MENU ENTRIES -->
    <string name="menu_clear_grocery">Clear grocery</string>
    <string name="end_grocery">Checkout</string>
    <string name="menu_payment_history">Payment history</string>
    <string name="menu_payment_methods">Payment methods</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_informations">About us</string>
    <string name="menu_category_others">Others</string>

    <!-- ALERT NOTIFICATIONS -->
    <string name="log_out_title">Logging out!</string>
    <string name="log_out_message">Are you sure to log out? Shopping cart will be emptied!</string>
    <string name="clear_grocery_title">Clearing the shopping cart!</string>
    <string name="clear_grocery_message">Are you sure to clear the shopping cart? This cannot be undone</string>
    <string name="clear_grocery_login_title">No grocery to be cleared!</string>
    <string name="clear_grocery_login_message">Scan a QR code to start a new grocery</string>
    <string name="error_qr_store_title">QR not recognized</string>
    <string name="error_qr_store_message">The scanned QR is wrong! Ask the shopping assistants</string>
    <string name="error_barcode_title">Barcode not recognized!</string>
    <string name="error_barcode_message">Barcode not found!\nAsk shopping assistants!</string>
    <string name="error_connecting_title">Unavailable Service</string>
    <string name="error_connecting_message">HappyGrocery can\'t reach the required service!</string>
    <string name="clear_firebase_title">Deleting payment history</string>
    <string name="clear_firebase_message">Are you sure? You won\'t be able to revert this operation</string>

    <!-- Buttons Options -->
    <string name="about_us_title">HAPPY GROCERY EVERYONE!</string>
    <string name="about_us_message">Hi! We are Alessandro Castellani and Fabio Castello,
        students from Politecnico di Milano. This is our project for the course
        Design and Implementation of Mobile Applications. Feel free to contact us at:
        castellani.alessandro@mail.polimi.it</string>

    <!-- TITLES FOR SHOPPING CART ACTIVITY -->
    <string name="Food_Title">Food</string>
    <string name="Beverage_Title">Beverage</string>
    <string name="Kids_Title">Kids and Stationery</string>
    <string name="Home_Title">Home needs</string>
    <string name="Clothing_Title">Clothing</string>
    <string name="Other_Title">Other Categories</string>

    <!-- BUTTON OPTIONS -->
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>

    <!-- Activity Texts and the like -->
    <string name="Welcome">Welcome!</string>
    <string name="HappyGrocery">Happy Grocery</string>

    <!-- SHARED PREFERENCES FOR SHOP NAME AND URL -->
    <string name="shop_url">SHOP_URL</string>
    <string name="shop_name">SHOP_NAME</string>

    <!-- USED IN PAYMENT HISTORY ACTIVITY -->
    <string name="closed_grocery">Closed</string>

    <!-- USED TO DISPLAY TEXT WHEN A WEARABLE CONNECTS TO THE APP -->
    <string name="wearable_connected">Connected to your wearable device!</string>
    <string name="wearable_disconnected">Connection lost with your wearable device.</string>


</resources>
