<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/clear_grocery"
            android:icon="@drawable/clear1"
            android:title="@string/menu_clear_grocery" />
        <item
            android:id="@+id/payment_history"
            android:icon="@drawable/payment_history"
            android:title="@string/menu_payment_history" />
        <item
            android:id="@+id/end_grocery"
            android:icon="@drawable/payment_methods"
            android:title="@string/end_grocery" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/logout1"
            android:title="@string/menu_log_out" />
    </group>

    <item android:title="@string/menu_category_others">
        <menu>
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/about_us"
                android:title="@string/menu_informations" />
        </menu>
    </item>

</menu>
